<resources>
    <string name="app_name">EasyEnglish</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="text_dictionary">Dictionary</string>
    <string name="text_tests">Tests</string>
    <string name="text_profile">Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="commit">Commit</string>
    <string name="msg_empty_words_string">Вы не ввели слово для перевода!</string>
    <string name="english">английский</string>
    <string name="russian">русский</string>
    <string name="enter_your_original_word">Enter your original word</string>
    <string name="enter_your_translated_word">Enter your translated word:</string>
    <string name="translate">Перевести</string>
    <string name="er_enter_word">Enter word</string>
</resources>
